--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -21,10 +21,9 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100vh; /* 100% высоты окна браузера */
-            margin: 0; /* Отступы от краев отсутствуют */
+            min-height: 100vh;
+            margin: 0;
         }
-
         .container {
             background-color: #e7e1ff;
             padding: 30px;
@@ -33,45 +32,39 @@
             width: 460px;
             min-height: 150px;
             flex-direction: column;
-            justify-content: space-between; /* Распределение пространства между элементами */
+            justify-content: space-between;
             display: flex;
         }
-
         h1 {
             color: #111111;
             margin-bottom: 20px;
         }
-
         p {
             color: #979797;
             margin-bottom: 30px;
         }
-
         .input-group {
             margin-bottom: 20px;
             position: relative;
         }
-
         .input-group input {
             width: 100%;
             padding: 12px;
-            border: 1px solid #ffffff; /* Граница поля ввода */
+            border: 1px solid #ffffff;
             border-radius: 20px;
             box-sizing: border-box;
         }
-
         .input-group input:focus {
             outline: none;
             border-color: #ffffff;
         }
-
         button {
             background-color: #cec3ff;
             color: white;
             padding: 15px 20px;
             border: none;
             border-radius: 20px;
-            cursor: pointer; /* Курсор в виде указателя */
+            cursor: pointer;
             font-size: 16px;
             width: 100%;
             font-weight: bold;
@@ -81,7 +74,6 @@
         button:hover {
             background-color: #ad9aff;
         }
-
         .google-login {
             border: none;
             padding: 10px;
@@ -100,13 +92,11 @@
         .google-login:hover {
             transform: scale(1.1);
         }
-
         a {
             color: #979797;
             margin-bottom: 10px;
             text-decoration: none;
         }
-
         a:hover {
             text-decoration: underline;
         }
@@ -143,7 +133,6 @@
     </form>
     <p>Or Continue With</p>
     <div class="google-login">
-        <!-- Кнопка входа через Google -->
         <a href="">
             <img
                     src="https://static.cdnlogo.com/logos/g/38/google-icon.svg"
